Add Back and Clear buttons on all components. Update readme

--- a/multiplication.html
+++ b/multiplication.html
@@ -42,6 +42,7 @@
         <input id="num2"><br><br>
         <button onclick="main()">Calculate Product</button>
         <p id="result"></p>
+        <p><a href="index.html"><button>Back</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="multiplication.html"><button>Clear</button></a></p>
     </div>
 </body>
 </html>
