--- a/addition.html
+++ b/addition.html
@@ -42,6 +42,7 @@
         <input id="num2"><br><br>
         <button onclick="calculateSum()">Calculate Sum</button>
         <p id="result"></p>
+        <p><a href="index.html"><button>Back</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="addition.html"><button>Clear</button></a></p>
     </div>
 </body>
 </html>
